k8s/ns-and-sa.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: face-check
