k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: backend
  namespace: face-check
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    app: face-check-backend
